it will add changes to html and css files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">   
+    <link rel="stylesheet" href="./css/bootstrap.min.css">   
     <title>DELANI STUDIO</title>
 </head>
 
@@ -45,31 +45,44 @@
         or just the pieces you need.<br>
     </div>
 
-    <div class = "container-fluid">
+    <!--what we do section-->
+    <h2>WHAT WE DO</h2><br<br><br>
+    <div class = "container-fluid" >
         <div class = "row">
-            <div class = "col-md-4">
-                <p>
+            <div class = "col-md-4" id="whatwedo1">
+                <div id="imgs1">
+                    <img src = "IMAGES/services_icons/design_icon.png" >
+                </div>
+                <div id="text1">
+                <p > 
                     Lorem ipsum dolor sit amet consectetur, 
                     adipisicing elit. Ab fugit delectus culpa 
                     architecto, nobis excepturi praesentium non, 
                     reiciendis soluta quas ea laboriosam 
                     deserunt illum id distinctio debitis minus expedita rerum?
                 </p>
+                </div>
             </div>
-            <div class = "col-md-4">
+            <div class = "col-md-4" id ="whatwedo2">
+                <img src = "IMAGES/services_icons/dev_icon.png" id = "imgs2">
+                <div id="text2">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Dignissimos, iure debitis. Quisquam fugit odit libero rem 
                     repudiandae ipsum sequi, optio laudantium expedita incidunt
                      possimus delectus ducimus nam deleniti corrupti explicabo?
                 </p>
+                </div>
             </div>
-            <div class = "col-md-4">
-                <p>
+            <div class = "col-md-4" id= "whatwedo3">
+                <img src = "IMAGES/services_icons/product_icon.png" id = "imgs3">
+                <div>
+                <p id = "text3">
                     lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Quaerat sint qui ut soluta, aut facilis libero enim dicta fuga 
                     ratione provident error 
                     et amet aspernatur quidem! Nostrum asperiores quod reiciendis.
+                </div>
                 </p>
             </div>
         </div>
@@ -77,7 +90,7 @@
         
 
   
-
+<!--PORTFOLIO SECTION-->
    
 
 
@@ -153,10 +166,10 @@
     <div class="delanistudio">
         DELANI STUDIO <br>2019
     </div>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="./js/scriptz.js"></script>
+    
 </body>
 
 </html>
