--- a/index.html
+++ b/index.html
@@ -45,48 +45,50 @@
         or just the pieces you need.<br>
     </div>
 
-    <!--what we do section-->
-    <h2>WHAT WE DO</h2><br<br><br>
-    <div class = "container-fluid" >
-        <div class = "row">
-            <div class = "col-md-4" id="whatwedo1">
-                <div id="imgs1">
-                    <img src = "IMAGES/services_icons/design_icon.png" >
+
+        <!--what we do section-->
+        <h2>WHAT WE DO</h2><br<br><br>
+        <div class = "container-fluid" >
+            <div class = "row">
+                <div class = "col-md-4" id="whatwedo1">
+                    <div id="imgs1">
+                        <img src = "IMAGES/services_icons/design_icon.png" >
+                    </div>
+                    <div id="text1">
+                    <p > 
+                        Our design practice offers a full range of services including brand
+                        strategy, interaction and visual design and user experience testing.
+                        Throughout your project, our designers create and implement visual design and workflows, solicit
+                        user feedback and work with you to make sure what gets built is what is needed.
+                    </p>
+                    </div>
                 </div>
-                <div id="text1">
-                <p > 
-                    Lorem ipsum dolor sit amet consectetur, 
-                    adipisicing elit. Ab fugit delectus culpa 
-                    architecto, nobis excepturi praesentium non, 
-                    reiciendis soluta quas ea laboriosam 
-                    deserunt illum id distinctio debitis minus expedita rerum?
-                </p>
+                <div class = "col-md-4" id ="whatwedo2">
+                    <img src = "IMAGES/services_icons/dev_icon.png" id = "imgs2">
+                    <div id="text2">
+                    <p>
+                        All engineers are fluent in the latest enterprise, mobile and web
+                        development
+                        technologies.
+                        They collaborate with your team to write, and improve code on a daily basis, using proven
+                        practices
+                        such as test-driven development and pair programming.
+                    </p>
+                    </div>
                 </div>
-            </div>
-            <div class = "col-md-4" id ="whatwedo2">
-                <img src = "IMAGES/services_icons/dev_icon.png" id = "imgs2">
-                <div id="text2">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Dignissimos, iure debitis. Quisquam fugit odit libero rem 
-                    repudiandae ipsum sequi, optio laudantium expedita incidunt
-                     possimus delectus ducimus nam deleniti corrupti explicabo?
-                </p>
+                <div class = "col-md-4" id= "whatwedo3">
+                    <img src = "IMAGES/services_icons/product_icon.png" id = "imgs3">
+                    <div>
+                    <p id = "text3">
+                        Planning and development is iterative. Because we are constantly
+                        coding
+                        and testing, the products we build are always ready to go live.
+                        This iterative process allows for changes as business requirements evolve.
+                    </div>
+                    </p>
                 </div>
-            </div>
-            <div class = "col-md-4" id= "whatwedo3">
-                <img src = "IMAGES/services_icons/product_icon.png" id = "imgs3">
-                <div>
-                <p id = "text3">
-                    lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Quaerat sint qui ut soluta, aut facilis libero enim dicta fuga 
-                    ratione provident error 
-                    et amet aspernatur quidem! Nostrum asperiores quod reiciendis.
-                </div>
-                </p>
             </div>
         </div>
-    </div>
         
 
   
@@ -102,39 +104,39 @@
         <div class ="row"></div>
 
         <div class="objects">
-            <img src="IMAGES/portfolio/work4.jpg" width="90%">
+            <img src="IMAGES/portfolio/work4.jpg" width="100%">
         </div>
 
         <div class="objects">
-            <img src="IMAGES/portfolio/work3.jpg" width="90%">
+            <img src="IMAGES/portfolio/work3.jpg" width="100%">
         </div>
 
         <div class="objects">
-            <img src="IMAGES/portfolio/work2.jpg" width="90%">
+            <img src="IMAGES/portfolio/work2.jpg" width="100%">
         </div>
         <div class="objects">
-            <img src="IMAGES/portfolio/work1.jpg" width="90%">
+            <img src="IMAGES/portfolio/work1.jpg" width="100%">
         </div>
     </div>
 
     <div class="container-fluid">
         <div class="objects">
-            <img src="IMAGES/portfolio/work5.jpg" width="90%">
+            <img src="IMAGES/portfolio/work5.jpg" width="100%">
         </div>
 
         <div class="objects">
-            <img src="IMAGES/portfolio/work6.jpg" width="90%">
+            <img src="IMAGES/portfolio/work6.jpg" width="100%">
         </div>
 
         <div class="objects">
-            <img src="IMAGES/portfolio/work7.jpg" width="90%">
+            <img src="IMAGES/portfolio/work7.jpg" width="100%">
         </div>
         <div class="objects">
-            <img src="IMAGES/portfolio/work8.jpg" width="90%">
+            <img src="IMAGES/portfolio/work8.jpg" width="100%">
         </div>
     </div>
     </div>
-    <div class="header">
+    <div class="header" >
         <div class="contactus">
             CONTACT US
         </div>
