added the contact us section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
         </div>
     </div>
     </div>
+
+    <!--CONTACT US SECTION-->
     <div class="header" >
         <div class="contactus">
             CONTACT US
